--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
+  background-color: #1a1a1a;
+}
+
+.btn {
+  border-radius: 37px;
+  background: linear-gradient(180deg, #3c77f7 0%, #2b56b3 100%);
+  box-shadow: 0px 21.06667px 42.13334px 0px rgba(11, 21, 44, 0.27),
+    0px 6.92859px 6.92859px 0px #3e7bff inset,
+    0px -6.92859px 6.92859px 0px #2952aa inset;
+}
+
+.title {
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    180deg,
+    #dbdbdb 64.8%,
+    rgba(255, 255, 255, 0) 95.07%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gray-btn {
+  border-radius: 27px;
+  background: linear-gradient(180deg, #212121 0%, #2c2c2c 100%);
+  box-shadow: 0px 30.06667px 60.13334px 0px rgba(8, 8, 8, 0.24),
+    0px 9.35407px 9.35407px 0px #2d2d2d inset,
+    0px -9.35407px 9.35407px 0px #1f1f1f inset;
 }
